--- a/trunk/po/el.po
+++ b/trunk/po/el.po
@@ -1,18 +1,18 @@
 # translation of el.po to
 # translation of sim.po to
 # Copyright (C) 2003 Free Software Foundation, Inc.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2005-04-20 21:00+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
 msgid ""
@@ -379,8 +379,7 @@ msgid ""
 "please leave your message and I will get back to you as soon as I return!"
 msgstr ""
 "Αυτή τη στιγμή δε είμαι κοντά στο ICQ \n"
-"Παρακαλώ αφητε το μήνυμά σας και θα σας "
-"απαντήσω όταν γυρίσω!\n"
+"Παρακαλώ αφητε το μήνυμά σας και θα σας απαντήσω όταν γυρίσω!\n"
 
 #: plugins/_core/core.cpp:376
 #, fuzzy
@@ -394,9 +393,7 @@ msgstr ""
 #: plugins/_core/core.cpp:380
 #, fuzzy
 msgid "Please do not disturb me now. Disturb me later."
-msgstr ""
-"Παρακαλώ μη με ενοχλείτε τώρα. Ενοχλήστε "
-"με αργότερα \n"
+msgstr "Παρακαλώ μη με ενοχλείτε τώρα. Ενοχλήστε με αργότερα \n"
 
 #: plugins/_core/core.cpp:383
 msgid "I'm occupied at the moment. Please only urgent messages."
@@ -405,9 +402,7 @@ msgstr ""
 #: plugins/_core/core.cpp:386
 #, fuzzy
 msgid "We'd love to hear what you have to say. Join our chat."
-msgstr ""
-"Θα ήθελα να ακούσω τι έχεις να πείς. Ελά "
-"στο Chat μας.\n"
+msgstr "Θα ήθελα να ακούσω τι έχεις να πείς. Ελά στο Chat μας.\n"
 
 #: plugins/_core/core.cpp:389
 #, fuzzy
@@ -469,15 +464,9 @@ msgstr "Πληροφορίες Χρήστη"
 msgid "&History"
 msgstr "&Ιστορικό"
 
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
-msgstr "&Κλείσιμο"
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+msgid "Close"
+msgstr "Κλείσιμο"
 
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
 msgid "&Send"
@@ -485,7 +474,7 @@ msgstr "&Αποστολή"
 
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
 #, fuzzy
-msgid "&Insert smile"
+msgid "I&nsert smile"
 msgstr "Προσθήκη ΦΑΤΣΟΥΛΑΣ"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 94
@@ -500,7 +489,8 @@ msgid "C&lose after send"
 msgstr "Κ&λείσιμο μετά την αποστολή"
 
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "Πολλαπλή αποστολή"
 
 #: plugins/_core/core.cpp:645 plugins/_core/core.cpp:748
@@ -510,7 +500,7 @@ msgstr "Φόντο"
 
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
 #, fuzzy
-msgid "&Foreground color"
+msgid "Fo&reground color"
 msgstr "Φόντο"
 
 #: plugins/_core/core.cpp:659 plugins/_core/core.cpp:763
@@ -518,7 +508,8 @@ msgid "&Bold"
 msgstr "&Εντονα"
 
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "&Πλάγια"
 
 #: plugins/_core/core.cpp:673 plugins/_core/core.cpp:777
@@ -527,7 +518,7 @@ msgstr "&Υπογραμμισμένα"
 
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
 #, fuzzy
-msgid "Select &font"
+msgid "Select f&ont"
 msgstr "Επιλογή Γραμματοσειράς"
 
 #: plugins/_core/core.cpp:687
@@ -644,11 +635,9 @@ msgstr "Έλεγχος Ορθογραφίας"
 msgid "&Messages"
 msgstr "&Μήνυμα"
 
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, fuzzy, no-c-format
-msgid "&SMS"
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+msgid "SMS"
 msgstr "SMS"
 
 #: plugins/_core/core.cpp:959
@@ -775,15 +764,13 @@ msgstr "Απόρριψη αρχείου χωρίς λόγο"
 #: plugins/_core/core.cpp:1240 plugins/_core/core.cpp:3224
 msgid "Sorry, I'm busy right now, and can not respond to your request"
 msgstr ""
-"Συγνώμη, είμαι απασχολημένος αυτή τη "
-"στιγμή και δεν μπορώ να απαντήσω στο "
+"Συγνώμη, είμαι απασχολημένος αυτή τη στιγμή και δεν μπορώ να απαντήσω στο "
 "αίτημά σας"
 
 #: plugins/_core/core.cpp:1245 plugins/_core/core.cpp:3228
 msgid "Sorry, I'm busy right now, but I'll be able to respond to you later"
 msgstr ""
-"Συγνώμη, είμαι απασχολημένος αυτή τη "
-"στιγμή αλλά θα σας απαντήσω αργότερα"
+"Συγνώμη, είμαι απασχολημένος αυτή τη στιγμή αλλά θα σας απαντήσω αργότερα"
 
 #: plugins/_core/core.cpp:1250
 msgid "Enter a decline reason"
@@ -894,8 +881,7 @@ msgstr ""
 #: plugins/_core/core.cpp:1635
 #, fuzzy
 msgid "Don't show this message in next time"
-msgstr ""
-"Μην εμφανίζεις αυτό το παράθυρο διαλόγου"
+msgstr "Μην εμφανίζεις αυτό το παράθυρο διαλόγου"
 
 #: plugins/_core/core.cpp:1667
 msgid "`<command>` - call <command> and substitute command output\n"
@@ -965,38 +951,38 @@ msgid ""
 msgstr ""
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, fuzzy, no-c-format
 msgid "Connection manager"
 msgstr "Σύνδεση"
 
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 #, fuzzy
 msgid "Show status panel"
 msgstr "Κατάσταση Τηλεφώνου"
 
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 #, fuzzy
 msgid "Connections"
 msgstr "Σύνδεση"
 
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 #, fuzzy
 msgid "Change profile"
 msgstr "το αρχείο"
 
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 #, fuzzy
 msgid "Common status"
 msgstr "Κατάσταση Τηλεφώνου"
 
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 #, fuzzy
 msgid "Configure client"
 msgstr "Πελάτης ICQ"
 
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 #, fuzzy
 msgid "&Invisible"
@@ -1178,6 +1164,15 @@ msgstr "Η αποστολή απέτυχε"
 msgid "Transfer done"
 msgstr "Ολοκληρώθηκε η μεταφορά του αρχείου"
 
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Κλείσιμο"
+
 #: plugins/_core/filetransfer.cpp:369
 #, fuzzy
 msgid "Transfer failed"
@@ -1317,9 +1312,7 @@ msgstr "Αποθήκευση Ιστορικού"
 #: plugins/_core/historycfgbase.cpp:192 rc.cpp:1475
 #, no-c-format
 msgid "Use &own colors and fonts settings"
-msgstr ""
-"Χρησιμοποίηση ρυθμίσεων &ειδικών "
-"γραμματοσειρών και χρωμάτων"
+msgstr "Χρησιμοποίηση ρυθμίσεων &ειδικών γραμματοσειρών και χρωμάτων"
 
 #. i18n: file ./plugins/_core/userhistorycfgbase.ui line 72
 #: plugins/_core/historycfgbase.cpp:193
@@ -1367,7 +1360,7 @@ msgstr ""
 
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 msgid "Error"
@@ -1489,16 +1482,10 @@ msgstr "Η λίστα επαφών εστάλλει"
 msgid "Messages"
 msgstr "Μήνυμα"
 
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-msgid "SMS"
-msgstr "SMS"
-
 #: plugins/_core/interfacecfg.cpp:142
 #, fuzzy
 msgid "Copy %1 messages from history"
-msgstr ""
-"τελευταία μηνύματα από το ιστορικό στη "
-"συνομιλία"
+msgstr "τελευταία μηνύματα από το ιστορικό στη συνομιλία"
 
 #. i18n: file ./plugins/_core/interfacecfgbase.ui line 267
 #: plugins/_core/interfacecfg.cpp:151 plugins/_core/interfacecfgbase.cpp:140
@@ -1536,8 +1523,7 @@ msgstr "Κατάσταση"
 #: plugins/_core/interfacecfgbase.cpp:132 rc.cpp:1417
 #, fuzzy, no-c-format
 msgid "&Using last selected font"
-msgstr ""
-"Χρησιμοποίηση &γραμματοσειρών συστήματος"
+msgstr "Χρησιμοποίηση &γραμματοσειρών συστήματος"
 
 #. i18n: file ./plugins/_core/interfacecfgbase.ui line 118
 #: plugins/_core/interfacecfgbase.cpp:133 rc.cpp:1420
@@ -1856,8 +1842,7 @@ msgstr ""
 #: plugins/_core/msgcfgbase.cpp:84 rc.cpp:1659
 #, fuzzy, no-c-format
 msgid "Open window if user go online"
-msgstr ""
-"Άνοιγμα παραθύρου χρήστη όταν είναι online"
+msgstr "Άνοιγμα παραθύρου χρήστη όταν είναι online"
 
 #. i18n: file ./plugins/_core/msgcfgbase.ui line 80
 #: plugins/_core/msgcfgbase.cpp:86 rc.cpp:1665
@@ -2510,8 +2495,7 @@ msgstr ""
 #: rc.cpp:97 rc.cpp:1821
 #, fuzzy, no-c-format
 msgid "Use system &colors"
-msgstr ""
-"Χρησιμοποίηση &γραμματοσειρών συστήματος"
+msgstr "Χρησιμοποίηση &γραμματοσειρών συστήματος"
 
 #. i18n: file ./plugins/_core/userviewcfgbase.ui line 260
 #: plugins/_core/userviewcfgbase.cpp:261 rc.cpp:1824
@@ -3000,8 +2984,7 @@ msgstr ""
 #, no-c-format
 msgid "Send all messages in status \"Away\" and \"N/A\" on the cellular:"
 msgstr ""
-"Αποστολή όλων των μηνυμάτων όταν η "
-"κατάσταση είναι \"Μακριά\" η \"Μη "
+"Αποστολή όλων των μηνυμάτων όταν η κατάσταση είναι \"Μακριά\" η \"Μη "
 "Διαθέσιμος\" στο κινητό:"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 65
@@ -3012,10 +2995,8 @@ msgid ""
 "specified in the beginning of the message a line:\n"
 "<UIN>:"
 msgstr ""
-"Για την απάντηση η την αποστολή του νέου "
-"μηνύματος μπορείτε να απαντήσετε με SMS "
-"αφού ορίσετε στην αρχή του μηνύματος μια "
-"γραμμή τύπου:\n"
+"Για την απάντηση η την αποστολή του νέου μηνύματος μπορείτε να απαντήσετε με "
+"SMS αφού ορίσετε στην αρχή του μηνύματος μια γραμμή τύπου:\n"
 "<UIN>:"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 83
@@ -4256,8 +4237,7 @@ msgstr ""
 #: plugins/icq/icqlogin.cpp:351
 #, fuzzy
 msgid "Your UIN is being used from another location"
-msgstr ""
-"Το UIN χρησημοποιείται από άλλη τοποθεσία"
+msgstr "Το UIN χρησημοποιείται από άλλη τοποθεσία"
 
 #: plugins/icq/icqlogin.cpp:373
 msgid "Close packet from server"
@@ -5177,18 +5157,15 @@ msgstr "Αίτηση ασφαλούς καναλιού"
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
-"Το ασφαλές κανάλι εγκαθίσταται "
-"χρησιμοποιώντας το SSL με την ανταλλαγή "
-"κλειδιών του Diffie-Hellman και το TLS version 1 "
-"πρωτόκολλο.\n"
+"Το ασφαλές κανάλι εγκαθίσταται χρησιμοποιώντας το SSL με την ανταλλαγή "
+"κλειδιών του Diffie-Hellman και το TLS version 1 πρωτόκολλο.\n"
 "\n"
-"Αυτό λειτουγεί μόνο με άλλους SIM η Licq "
-"πελάτες."
+"Αυτό λειτουγεί μόνο με άλλους SIM η Licq πελάτες."
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: plugins/icq/verifydlgbase.cc:110 rc.cpp:1000
@@ -5716,7 +5693,7 @@ msgstr ""
 msgid "Log On"
 msgstr ""
 
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 msgid "Log Off"
 msgstr ""
 
@@ -5769,9 +5746,9 @@ msgstr ""
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
 
 #: plugins/jabber/jabbersearch.cpp:304
@@ -5952,10 +5929,9 @@ msgstr "Η αποστολή απέτυχε"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 
 #: plugins/livejournal/livejournal.cpp:1319
@@ -6735,8 +6711,7 @@ msgstr ""
 #: plugins/yahoo/yahooclient.cpp:393
 #, fuzzy
 msgid "Your account is being used from another location"
-msgstr ""
-"Το UIN χρησημοποιείται από άλλη τοποθεσία"
+msgstr "Το UIN χρησημοποιείται από άλλη τοποθεσία"
 
 #: plugins/msn/msnclient.cpp:1873 plugins/msn/msnclient.cpp:1880
 #, fuzzy
@@ -7473,6 +7448,12 @@ msgstr ""
 msgid "Software handshake"
 msgstr ""
 
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "Καναδάς"
+
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
 #, fuzzy, no-c-format
@@ -7608,8 +7589,7 @@ msgstr ""
 #: plugins/styles/fontconfigbase.cpp:99 rc.cpp:85 rc.cpp:1393
 #, fuzzy, no-c-format
 msgid "Use &system fonts"
-msgstr ""
-"Χρησιμοποίηση &γραμματοσειρών συστήματος"
+msgstr "Χρησιμοποίηση &γραμματοσειρών συστήματος"
 
 #. i18n: file ./plugins/styles/fontconfigbase.ui line 50
 #: plugins/styles/fontconfigbase.cpp:100 rc.cpp:88 rc.cpp:1396
@@ -7742,8 +7722,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -8722,10 +8702,8 @@ msgid ""
 "There is already an auto hidden window on this edge.\n"
 "Only one auto hidden window is allowed on each edge."
 msgstr ""
-"Υπάρχει ήδη ένα αυτόματα κρυμμένο "
-"παράθυρο σ'αυτή τη γωνία \n"
-"Μόνο ένα αυτόματα κρυμμένο παράθυρο "
-"επιτρέπεται σε κάθε γωνία"
+"Υπάρχει ήδη ένα αυτόματα κρυμμένο παράθυρο σ'αυτή τη γωνία \n"
+"Μόνο ένα αυτόματα κρυμμένο παράθυρο επιτρέπεται σε κάθε γωνία"
 
 #: plugins/windock/windock.cpp:360
 msgid "AutoHide"
@@ -8888,9 +8866,7 @@ msgstr "Θεόδωρος Καρκούλης"
 
 #: sim/aboutdata.cpp:283
 msgid "This program is distributed under the terms of the GPL v2."
-msgstr ""
-"Αυτό το πρόγραμμα διατίθεται κάτων από το "
-"GPL v2"
+msgstr "Αυτό το πρόγραμμα διατίθεται κάτων από το GPL v2"
 
 #: sim/ballonmsg.cpp:344
 msgid "&Ok"
@@ -10244,6 +10220,10 @@ msgid "Custom"
 msgstr "Αποκοπή"
 
 #, fuzzy
+#~ msgid "&SMS"
+#~ msgstr "SMS"
+
+#, fuzzy
 #~ msgid "Close after %n second"
 #~ msgstr "Κ&λείσιμο μετά την αποστολή"
 
@@ -10469,9 +10449,7 @@ msgstr "Αποκοπή"
 #~ msgstr "Διαγραφή %1"
 
 #~ msgid "<qt>Do you really want to delete %1 \"%2\"?</qt>"
-#~ msgstr ""
-#~ "<qt>Θέλετε πραγματικά να διαγράψετε το %1 "
-#~ "\"%2\"?</qt>"
+#~ msgstr "<qt>Θέλετε πραγματικά να διαγράψετε το %1 \"%2\"?</qt>"
 
 #~ msgid "New Folder 1"
 #~ msgstr "Νέος Φάκελος 1"
@@ -10528,27 +10506,21 @@ msgstr "Αποκοπή"
 #~ msgid "Apply"
 #~ msgstr "Εφαρμογή"
 
-#~ msgid "Close"
-#~ msgstr "Κλείσιμο"
-
 #~ msgid "Select Font"
 #~ msgstr "Επιλογή Γραμματοσειράς"
 
 #~ msgid ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ GUI "
-#~ "toolkit from Trolltech. Qt provides single-source portability across Windows "
-#~ "95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of Unix with "
-#~ "X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
+#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
+#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
+#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
+#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
 #~ "information.</p>"
 #~ msgstr ""
-#~ "<h3>Πληροφορίες Qt</h3><p>Αυτό το πρόγραμμα "
-#~ "χρησιμοποιεί την έκδοση QT %1,  ένα multiplatform "
-#~ "C++ GUI εργαλείο από την Trolltech. Το Qt παρέχει "
-#~ "εύκολη μεταφορά ανάμεσα σε Windows 95/98/NT/2000, "
-#~ "Linux, Solaris, HP-UX και πολλές άλλες εκδόσεις του "
-#~ "Unix με X11.</p><p>Διαβάστε στο "
-#~ "<tt>http://www.trolltech.com/qt/</tt>για πιο πολλές "
-#~ "πληροφορίες.</p>"
+#~ "<h3>Πληροφορίες Qt</h3><p>Αυτό το πρόγραμμα χρησιμοποιεί την έκδοση QT %"
+#~ "1,  ένα multiplatform C++ GUI εργαλείο από την Trolltech. Το Qt παρέχει "
+#~ "εύκολη μεταφορά ανάμεσα σε Windows 95/98/NT/2000, Linux, Solaris, HP-UX "
+#~ "και πολλές άλλες εκδόσεις του Unix με X11.</p><p>Διαβάστε στο <tt>http://"
+#~ "www.trolltech.com/qt/</tt>για πιο πολλές πληροφορίες.</p>"
 
 #~ msgid "Help"
 #~ msgstr "Βοήθεια"
@@ -10649,12 +10621,10 @@ msgstr "Αποκοπή"
 #~ msgstr "&Απόκρυψη"
 
 #~ msgid "Line Up Toolbars (compact)"
-#~ msgstr ""
-#~ "Ευθυγράμμιση Γραμμής Εργαλείων (μικρή)"
+#~ msgstr "Ευθυγράμμιση Γραμμής Εργαλείων (μικρή)"
 
 #~ msgid "Line Up Toolbars (normal)"
-#~ msgstr ""
-#~ "Ευθυγράμμιση Γραμμής Εργαλείων (κανονική)"
+#~ msgstr "Ευθυγράμμιση Γραμμής Εργαλείων (κανονική)"
 
 #~ msgid "Paste special..."
 #~ msgstr "Ειδική Επικόλληση..."
