--- a/trunk/po/es.po
+++ b/trunk/po/es.po
@@ -9,14 +9,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: sim-es\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2007-10-22 13:51+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: ES <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.10\n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
@@ -460,22 +460,17 @@ msgstr "&Información del usuario"
 msgid "&History"
 msgstr "&Historial"
 
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
-msgstr "&Cerrar"
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+msgid "Close"
+msgstr "Cerrar"
 
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
 msgid "&Send"
 msgstr "&Enviar"
 
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
-msgid "&Insert smile"
+#, fuzzy
+msgid "I&nsert smile"
 msgstr "&Insertar emoticón"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 94
@@ -490,7 +485,8 @@ msgid "C&lose after send"
 msgstr "Cer&rar después de enviar"
 
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "Envío &múltiple"
 
 #: plugins/_core/core.cpp:645 plugins/_core/core.cpp:748
@@ -498,7 +494,8 @@ msgid "Back&ground color"
 msgstr "Color del fon&do"
 
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
-msgid "&Foreground color"
+#, fuzzy
+msgid "Fo&reground color"
 msgstr "Color del &primer plano"
 
 #: plugins/_core/core.cpp:659 plugins/_core/core.cpp:763
@@ -506,7 +503,8 @@ msgid "&Bold"
 msgstr "&Negrita"
 
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "&Cursiva"
 
 #: plugins/_core/core.cpp:673 plugins/_core/core.cpp:777
@@ -514,7 +512,8 @@ msgid "&Underline"
 msgstr "S&ubrayado"
 
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
-msgid "Select &font"
+#, fuzzy
+msgid "Select f&ont"
 msgstr "Seleccionar fuente"
 
 #: plugins/_core/core.cpp:687
@@ -618,12 +617,10 @@ msgstr "Revisión ortográfica"
 msgid "&Messages"
 msgstr "&Mensajes"
 
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, no-c-format
-msgid "&SMS"
-msgstr "&SMS"
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+msgid "SMS"
+msgstr "SMS"
 
 #: plugins/_core/core.cpp:959
 #, fuzzy
@@ -909,33 +906,33 @@ msgid ""
 msgstr ""
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, no-c-format
 msgid "Connection manager"
 msgstr "Administrador de conexiones"
 
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 msgid "Show status panel"
 msgstr "Mostrar barra de estado"
 
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 msgid "Connections"
 msgstr "Conexiones"
 
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 msgid "Change profile"
 msgstr "Cambiar perfil"
 
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 msgid "Common status"
 msgstr "Estado común"
 
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 msgid "Configure client"
 msgstr "Configurar cliente"
 
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 msgid "&Invisible"
 msgstr "&Invisible"
@@ -1106,6 +1103,15 @@ msgstr "Enviar archivo"
 msgid "Transfer done"
 msgstr "Transferencia realizada"
 
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Cerrar"
+
 #: plugins/_core/filetransfer.cpp:369
 msgid "Transfer failed"
 msgstr "Transferencia fallida"
@@ -1198,8 +1204,8 @@ msgid ""
 "<b><font color=\"#FF0000\">C</font><font color=\"#FFFF00\">olored</font></b> "
 "message"
 msgstr ""
-"Mensaje <b><font color=\"#FF0000\">c</font><font "
-"color=\"#FFFF00\">oloreado</font></b>"
+"Mensaje <b><font color=\"#FF0000\">c</font><font color=\"#FFFF00\">oloreado</"
+"font></b>"
 
 #. i18n: file ./plugins/_core/msgcfgbase.ui line 61
 #: plugins/_core/historycfg.cpp:679 plugins/_core/msgcfgbase.cpp:85
@@ -1292,7 +1298,7 @@ msgstr "Fichero de texto (*.txt)"
 
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 msgid "Error"
@@ -1410,10 +1416,6 @@ msgstr "Lista de contactos"
 #: plugins/_core/interfacecfg.cpp:98
 msgid "Messages"
 msgstr "Mensajes"
-
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-msgid "SMS"
-msgstr "SMS"
 
 #: plugins/_core/interfacecfg.cpp:142
 msgid "Copy %1 messages from history"
@@ -2584,8 +2586,8 @@ msgid ""
 msgstr ""
 "Para eventos con mensaje el texto del mensaje será enviado a la entrada "
 "estándar del programa.\n"
-"Si el programa devuelve cero como código de error el texto del mensaje "
-"será reemplazado con la salida del programa.\n"
+"Si el programa devuelve cero como código de error el texto del mensaje será "
+"reemplazado con la salida del programa.\n"
 "Si el programa no tiene salida el mensaje será eliminado.\n"
 "Así que es posible usarlo como filtro de mensaje adicional.\n"
 
@@ -2881,8 +2883,7 @@ msgstr "Etiquetas flotantes"
 
 #: plugins/floaty/floaty.cpp:46
 msgid "Plugin provides floating windows for contacts"
-msgstr ""
-"Esta extensión le permite tener etiquetas flotantes para los contactos"
+msgstr "Esta extensión le permite tener etiquetas flotantes para los contactos"
 
 #: plugins/floaty/floaty.cpp:75 plugins/floaty/floaty.cpp:155
 msgid "Floating on"
@@ -2938,8 +2939,7 @@ msgid ""
 "Plugin adds GnuPG encryption/decryption support for messages\n"
 "GPG not found in PATH"
 msgstr ""
-"Esta extensión añade soporte GnuPG para encriptar/desencriptar los "
-"mensajes\n"
+"Esta extensión añade soporte GnuPG para encriptar/desencriptar los mensajes\n"
 "GPG no encontrado en el PATH"
 
 #: plugins/gpg/gpg.cpp:362 plugins/gpg/gpg.cpp:368
@@ -3861,8 +3861,7 @@ msgstr ""
 #: plugins/icq/icqconfigbase.cc:287 rc.cpp:756
 #, no-c-format
 msgid "Disable automatically &update user info"
-msgstr ""
-"Deshabiltar la actualización automática de la información del usuario"
+msgstr "Deshabiltar la actualización automática de la información del usuario"
 
 #. i18n: file ./plugins/icq/icqconfigbase.ui line 646
 #: plugins/icq/icqconfigbase.cc:288 rc.cpp:759
@@ -4341,8 +4340,8 @@ msgstr "UIN"
 #, no-c-format
 msgid "My &authorization is required before users add me to Contact List"
 msgstr ""
-"Se requiere mi &autorización para que otros usuarios me añadan a su lista "
-"de contactos"
+"Se requiere mi &autorización para que otros usuarios me añadan a su lista de "
+"contactos"
 
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 75
 #: plugins/icq/icqsecurebase.cc:110 rc.cpp:945
@@ -4385,8 +4384,7 @@ msgstr "Permitir conexión &directa de cualquier usuario"
 #, no-c-format
 msgid "Allow direct connection from user listed in &contact list"
 msgstr ""
-"Permitir conexión directa de usuarios pertenecientes a la lista de "
-"&contactos"
+"Permitir conexión directa de usuarios pertenecientes a la lista de &contactos"
 
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 164
 #: plugins/icq/icqsecurebase.cc:118 rc.cpp:967
@@ -5039,8 +5037,8 @@ msgstr "Petición de canal seguro"
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
@@ -5567,7 +5565,7 @@ msgstr ""
 msgid "Log On"
 msgstr "Conectar"
 
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 msgid "Log Off"
 msgstr "Desconectar"
 
@@ -5617,12 +5615,12 @@ msgstr "Correo"
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
-"Seleccione la velocidad de la búsqueda.  \"Rápida\" busca la cadena solo "
-"al principio del campo (por ejemplo, \"b\" encajaría con Bob, Bill,etc...)  "
+"Seleccione la velocidad de la búsqueda.  \"Rápida\" busca la cadena solo al "
+"principio del campo (por ejemplo, \"b\" encajaría con Bob, Bill,etc...)  "
 "\"Lenta\" busca la cadena en cualquier parte del campo (por ejemplo, \"b\" "
 "encajaría con Bob,Bill,Caleb,Robbie,etc...)"
 
@@ -5659,8 +5657,8 @@ msgid ""
 "Enter your MSN Messenger account and password. Example: user@hotmail.com.  "
 "Nickname is optional."
 msgstr ""
-"Introduzca su cuenta MSN Messenger y contraseña. Ejemplo: "
-"usuario@hotmail.com. El apodo es opcional."
+"Introduzca su cuenta MSN Messenger y contraseña. Ejemplo: usuario@hotmail."
+"com. El apodo es opcional."
 
 #: plugins/jabber/jabbersearch.cpp:315
 msgid "Enter your AIM screenname or ICQ UIN and the password for that account"
@@ -5699,8 +5697,8 @@ msgid ""
 "Fill in a field to search for any matching Jabber User (POSIX regular "
 "expressions allowed)"
 msgstr ""
-"Rellene el campo para buscar algún usuario Jabber (las expresiones "
-"regulares POSIX están permitidas)"
+"Rellene el campo para buscar algún usuario Jabber (las expresiones regulares "
+"POSIX están permitidas)"
 
 #: plugins/jabber/jabbersearch.cpp:323
 msgid "Fill in a field to search for any matching Jabber users."
@@ -5801,10 +5799,9 @@ msgstr "Publicación fallida"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 
 #: plugins/livejournal/livejournal.cpp:1319
@@ -6511,8 +6508,8 @@ msgid ""
 "If you want to log more than one you may add the levels"
 msgstr ""
 "Esta extensión le proporciona un registro de sucesos\n"
-"Puede establecer el nivel de depuración desde la linea de comandos con "
-"-d<nivel>\n"
+"Puede establecer el nivel de depuración desde la linea de comandos con -"
+"d<nivel>\n"
 "Para errores, establezca nivel a 1, para avisos a 2 y para mensajes de "
 "depuración a 4\n"
 "Pueden añadirse más niveles si se desea un registro mayor."
@@ -7268,6 +7265,12 @@ msgstr "300"
 msgid "Software handshake"
 msgstr "Acuse de recibo"
 
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "y"
+
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
 #, no-c-format
@@ -7299,8 +7302,7 @@ msgstr "Sonido"
 #: plugins/sound/sound.cpp:55
 msgid "Plugin provides sounds on any events"
 msgstr ""
-"Esta extensión habilita la reproducción de sonidos tras producirse un "
-"evento"
+"Esta extensión habilita la reproducción de sonidos tras producirse un evento"
 
 #: plugins/sound/sound.cpp:119 plugins/sound/sound.cpp:126
 msgid "&Sound"
@@ -7536,8 +7538,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -9938,6 +9940,9 @@ msgstr "Error iniciar SSL"
 msgid "Custom"
 msgstr "Personalizar"
 
+#~ msgid "&SMS"
+#~ msgstr "&SMS"
+
 #~ msgid "Open links in &new window"
 #~ msgstr "Abrir enlaces en una ventana &nueva"
 
@@ -10017,11 +10022,11 @@ msgstr "Personalizar"
 #~ msgstr "*.wav|Sonidos"
 
 #~ msgid ""
-#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://messenger.ya"
-#~ "hoo.com/&.redir_from=MESSENGER"
+#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://"
+#~ "messenger.yahoo.com/&.redir_from=MESSENGER"
 #~ msgstr ""
-#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://messenger.ya"
-#~ "hoo.com/&.redir_from=MESSENGER"
+#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://"
+#~ "messenger.yahoo.com/&.redir_from=MESSENGER"
 
 #~ msgid "http://horoscopes.swirve.com/scope.cgi?Sign=%1"
 #~ msgstr "http://horoscopes.swirve.com/scope.cgi?Sign=%1"
@@ -10076,11 +10081,11 @@ msgstr "Personalizar"
 #~ msgstr "Taiwanés"
 
 #~ msgid ""
-#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content$/xp"
-#~ "troublesignin.htm"
+#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content"
+#~ "$/xptroublesignin.htm"
 #~ msgstr ""
-#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content$/xp"
-#~ "troublesignin.htm"
+#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content"
+#~ "$/xptroublesignin.htm"
 
 #~ msgid "Metal style"
 #~ msgstr "Estilo metalico"
@@ -10310,23 +10315,20 @@ msgstr "Personalizar"
 #~ msgid "Apply"
 #~ msgstr "Aplicar"
 
-#~ msgid "Close"
-#~ msgstr "Cerrar"
-
 #~ msgid "Select Font"
 #~ msgstr "Seleccionar fuente"
 
 #~ msgid ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ GUI "
-#~ "toolkit from Trolltech. Qt provides single-source portability across Windows "
-#~ "95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of Unix with "
-#~ "X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
+#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
+#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
+#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
+#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
 #~ "information.</p>"
 #~ msgstr ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ GUI "
-#~ "toolkit from Trolltech. Qt provides single-source portability across Windows "
-#~ "95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of Unix with "
-#~ "X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
+#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
+#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
+#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
+#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
 #~ "information.</p>"
 
 #~ msgid "Help"
