--- a/trunk/po/hu.po
+++ b/trunk/po/hu.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: sim\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2007-10-22 13:52+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Hungarian <translator@vgroup.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
 msgid ""
@@ -454,22 +454,17 @@ msgstr "Felhasználói információ"
 msgid "&History"
 msgstr "&Napló"
 
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
-msgstr "&Bezárás"
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+msgid "Close"
+msgstr "Bezár"
 
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
 msgid "&Send"
 msgstr "&Elküldés"
 
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
-msgid "&Insert smile"
+#, fuzzy
+msgid "I&nsert smile"
 msgstr "Elem beszúrása"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 94
@@ -484,7 +479,8 @@ msgid "C&lose after send"
 msgstr "E&lküldés után bezárja"
 
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "Másolat kül&dése"
 
 #: plugins/_core/core.cpp:645 plugins/_core/core.cpp:748
@@ -492,7 +488,8 @@ msgid "Back&ground color"
 msgstr "A háttér színe"
 
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
-msgid "&Foreground color"
+#, fuzzy
+msgid "Fo&reground color"
 msgstr "Az előtér színe"
 
 #: plugins/_core/core.cpp:659 plugins/_core/core.cpp:763
@@ -500,7 +497,8 @@ msgid "&Bold"
 msgstr "&Félkövér"
 
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "&Dőlt"
 
 #: plugins/_core/core.cpp:673 plugins/_core/core.cpp:777
@@ -508,7 +506,8 @@ msgid "&Underline"
 msgstr "Alá&húzott"
 
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
-msgid "Select &font"
+#, fuzzy
+msgid "Select f&ont"
 msgstr "Betűtípus-választás"
 
 #: plugins/_core/core.cpp:687
@@ -612,12 +611,10 @@ msgstr "Helyesírás-ellenőrzés"
 msgid "&Messages"
 msgstr "Ü&zenetek"
 
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, no-c-format
-msgid "&SMS"
-msgstr "&SMS"
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+msgid "SMS"
+msgstr "SMS"
 
 #: plugins/_core/core.cpp:959
 #, fuzzy
@@ -732,8 +729,8 @@ msgstr "Decline file without reason"
 #: plugins/_core/core.cpp:1240 plugins/_core/core.cpp:3224
 msgid "Sorry, I'm busy right now, and can not respond to your request"
 msgstr ""
-"Automatikus üzenet: Sajnálom, most elfoglalt vagyok és nem tudok "
-"válaszoni az üzenetedre..."
+"Automatikus üzenet: Sajnálom, most elfoglalt vagyok és nem tudok válaszoni "
+"az üzenetedre..."
 
 #: plugins/_core/core.cpp:1245 plugins/_core/core.cpp:3228
 msgid "Sorry, I'm busy right now, but I'll be able to respond to you later"
@@ -911,33 +908,33 @@ msgid ""
 msgstr ""
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, no-c-format
 msgid "Connection manager"
 msgstr "Kapcsolat kezelő"
 
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 msgid "Show status panel"
 msgstr "Mini &státusz látható"
 
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 msgid "Connections"
 msgstr "Kapcsolatok"
 
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 msgid "Change profile"
 msgstr "Profilszerkesztő"
 
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 msgid "Common status"
 msgstr "Jelenlegi állapot:"
 
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 msgid "Configure client"
 msgstr "A kliensprogram beállításai..."
 
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 msgid "&Invisible"
 msgstr "Láthatatlan"
@@ -1108,6 +1105,15 @@ msgstr "Fájl küldés"
 msgid "Transfer done"
 msgstr "Átvitel kész"
 
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Bezárás"
+
 #: plugins/_core/filetransfer.cpp:369
 msgid "Transfer failed"
 msgstr "Az Átvitel sikertelen volt."
@@ -1200,8 +1206,8 @@ msgid ""
 "<b><font color=\"#FF0000\">C</font><font color=\"#FFFF00\">olored</font></b> "
 "message"
 msgstr ""
-"<b><font color=\"#FF0000\">C</font><font "
-"color=\"#FFFF00\">színezett</font></b> üzenet"
+"<b><font color=\"#FF0000\">C</font><font color=\"#FFFF00\">színezett</font></"
+"b> üzenet"
 
 #. i18n: file ./plugins/_core/msgcfgbase.ui line 61
 #: plugins/_core/historycfg.cpp:679 plugins/_core/msgcfgbase.cpp:85
@@ -1294,7 +1300,7 @@ msgstr ""
 
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 msgid "Error"
@@ -1412,10 +1418,6 @@ msgstr "Kapcsolatok"
 #: plugins/_core/interfacecfg.cpp:98
 msgid "Messages"
 msgstr "Üzenetek"
-
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-msgid "SMS"
-msgstr "SMS"
 
 #: plugins/_core/interfacecfg.cpp:142
 msgid "Copy %1 messages from history"
@@ -4131,8 +4133,7 @@ msgstr "Azonosító elkészült"
 
 #: plugins/icq/icqlogin.cpp:328
 msgid "Can't login to ICQ network - Please try again later"
-msgstr ""
-"Nem tudtam bejelentkezni az ICQ hálózatra - kérlek próbáld meg késöbb"
+msgstr "Nem tudtam bejelentkezni az ICQ hálózatra - kérlek próbáld meg késöbb"
 
 #: plugins/icq/icqlogin.cpp:351
 #, fuzzy
@@ -4388,16 +4389,14 @@ msgstr "&Bármelyik felhasználó létrehozhat közvetlen kapcsolatot"
 #, no-c-format
 msgid "Allow direct connection from user listed in &contact list"
 msgstr ""
-"Csak a listánban szereplő felhasználók hozhatnak &létre direkt "
-"kapcsolatot"
+"Csak a listánban szereplő felhasználók hozhatnak &létre direkt kapcsolatot"
 
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 164
 #: plugins/icq/icqsecurebase.cc:118 rc.cpp:967
 #, no-c-format
 msgid "Allow direct connection from user &upon authorization"
 msgstr ""
-"Csak ez engedélyezett felhasználók hozhatnak létre &közvetlen "
-"kapcsolatot"
+"Csak ez engedélyezett felhasználók hozhatnak létre &közvetlen kapcsolatot"
 
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 45
 #: plugins/icq/icqsecurebase.cc:119 rc.cpp:939
@@ -5044,13 +5043,13 @@ msgstr "Biztonságos csatorna "
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 
@@ -5398,8 +5397,7 @@ msgstr "%1 Beállítása"
 #: plugins/jabber/jabberbrowser.cpp:998
 msgid "Choose a user and password to register with the server"
 msgstr ""
-"Válassz felhasználónevet és jelszavat a regisztrációhoz ehez a "
-"szerverhez"
+"Válassz felhasználónevet és jelszavat a regisztrációhoz ehez a szerverhez"
 
 #: plugins/jabber/jabberclient.cpp:1511 plugins/jabber/jabberclient.cpp:1606
 msgid "Photo"
@@ -5574,7 +5572,7 @@ msgstr ""
 msgid "Log On"
 msgstr "Naplózás"
 
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 msgid "Log Off"
 msgstr "Nincs naplózás"
 
@@ -5624,14 +5622,14 @@ msgstr "E-Mail"
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 
 #: plugins/jabber/jabbersearch.cpp:304
 msgid "Search Speed"
@@ -5819,10 +5817,9 @@ msgstr "Sikertelen küldés"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 
 #: plugins/livejournal/livejournal.cpp:1319
@@ -6651,9 +6648,7 @@ msgstr "Navigáció"
 #: plugins/navigate/navigate.cpp:304
 msgid ""
 "Plugin provides navigation on hyperlinks, call an external browser and mailer"
-msgstr ""
-"Ez a modul az általad használt böngésző és levelező beállítására "
-"való"
+msgstr "Ez a modul az általad használt böngésző és levelező beállítására való"
 
 #: plugins/navigate/navigate.cpp:351
 msgid "Send mail"
@@ -6746,8 +6741,8 @@ msgstr "Legfelül"
 #: plugins/ontop/ontop.cpp:52
 msgid "Plugin provides main window and containers always on top"
 msgstr ""
-"Ez a plugin a főablak és a kontakt ablak \"mindig felül\" állapotát "
-"teszi lehetővé."
+"Ez a plugin a főablak és a kontakt ablak \"mindig felül\" állapotát teszi "
+"lehetővé."
 
 #: plugins/ontop/ontop.cpp:80
 msgid "Always on top"
@@ -6773,8 +6768,7 @@ msgstr "OSD"
 msgid ""
 "Plugin provides on screen notification about messages and contacts status"
 msgstr ""
-"Ez a plugin a képernyőn jelenítí meg ha üzenet vagy a kapcsolatok "
-"állapotát."
+"Ez a plugin a képernyőn jelenítí meg ha üzenet vagy a kapcsolatok állapotát."
 
 #: plugins/osd/osd.cpp:157
 msgid "&OSD"
@@ -7292,6 +7286,12 @@ msgstr "300"
 msgid "Software handshake"
 msgstr "Szoftveres Kézfogás"
 
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "és"
+
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
 #, no-c-format
@@ -7555,8 +7555,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -10091,6 +10091,9 @@ msgstr "SSL init error"
 msgid "Custom"
 msgstr "Egyéni"
 
+#~ msgid "&SMS"
+#~ msgstr "&SMS"
+
 #~ msgid "Open links in &new window"
 #~ msgstr "A linkek megnyitása új ablakban"
 
@@ -10170,11 +10173,11 @@ msgstr "Egyéni"
 #~ msgstr "*.wav|hangfájlok"
 
 #~ msgid ""
-#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://messenger.ya"
-#~ "hoo.com/&.redir_from=MESSENGER"
+#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://"
+#~ "messenger.yahoo.com/&.redir_from=MESSENGER"
 #~ msgstr ""
-#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://messenger.ya"
-#~ "hoo.com/&.redir_from=MESSENGER"
+#~ "http://edit.yahoo.com/config/eval_forgot_pw?.src=pg&.done=http://"
+#~ "messenger.yahoo.com/&.redir_from=MESSENGER"
 
 #~ msgid "http://horoscopes.swirve.com/scope.cgi?Sign=%1"
 #~ msgstr "http://horoscopes.swirve.com/scope.cgi?Sign=%1"
@@ -10227,11 +10230,11 @@ msgstr "Egyéni"
 #~ msgstr "Taiwanesisch"
 
 #~ msgid ""
-#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content$/xp"
-#~ "troublesignin.htm"
+#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content"
+#~ "$/xptroublesignin.htm"
 #~ msgstr ""
-#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content$/xp"
-#~ "troublesignin.htm"
+#~ "http://help.microsoft.com/!data/en_us/data/messengerv47_xp.its51/$content"
+#~ "$/xptroublesignin.htm"
 
 #~ msgid "Metal style"
 #~ msgstr "Metál stílus"
@@ -10462,23 +10465,20 @@ msgstr "Egyéni"
 #~ msgid "Apply"
 #~ msgstr "Alkalmazás"
 
-#~ msgid "Close"
-#~ msgstr "Bezár"
-
 #~ msgid "Select Font"
 #~ msgstr "Betűtípus-választás"
 
 #~ msgid ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ GUI "
-#~ "toolkit from Trolltech. Qt provides single-source portability across Windows "
-#~ "95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of Unix with "
-#~ "X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
+#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
+#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
+#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
+#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
 #~ "information.</p>"
 #~ msgstr ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ GUI "
-#~ "toolkit from Trolltech. Qt provides single-source portability across Windows "
-#~ "95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of Unix with "
-#~ "X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
+#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
+#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
+#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
+#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
 #~ "information.</p>"
 
 #~ msgid "Help"
