--- a/trunk/po/nl.po
+++ b/trunk/po/nl.po
@@ -5,18 +5,18 @@
 # Email adress from Arend van Beelen jr. is out of date and so there is no
 # translator for dutch :-(
 # Christian, 17.04.2004
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2005-04-20 21:06+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Nederlands <i18n@kde.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
 #, fuzzy
@@ -474,15 +474,9 @@ msgstr "Benutzer&information"
 msgid "&History"
 msgstr "&Geschiedenis"
 
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
-msgstr "&Sluiten"
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+msgid "Close"
+msgstr "Sluiten"
 
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
 msgid "&Send"
@@ -490,7 +484,7 @@ msgstr "&Verzenden"
 
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
 #, fuzzy
-msgid "&Insert smile"
+msgid "I&nsert smile"
 msgstr "&Smiley invoegen"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 94
@@ -505,7 +499,8 @@ msgid "C&lose after send"
 msgstr "&Sluiten na verzenden"
 
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "Aan &meerdere versturen"
 
 #: plugins/_core/core.cpp:645 plugins/_core/core.cpp:748
@@ -515,7 +510,7 @@ msgstr "&Achtergrondkleur"
 
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
 #, fuzzy
-msgid "&Foreground color"
+msgid "Fo&reground color"
 msgstr "&Achtergrondkleur"
 
 #: plugins/_core/core.cpp:659 plugins/_core/core.cpp:763
@@ -523,7 +518,8 @@ msgid "&Bold"
 msgstr "&Vet"
 
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "&Cursief"
 
 #: plugins/_core/core.cpp:673 plugins/_core/core.cpp:777
@@ -532,7 +528,7 @@ msgstr "&Onderstrepen"
 
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
 #, fuzzy
-msgid "Select &font"
+msgid "Select f&ont"
 msgstr "Stijl selecteren:"
 
 #: plugins/_core/core.cpp:687
@@ -651,11 +647,10 @@ msgstr "Spellingscontrole"
 msgid "&Messages"
 msgstr "Bericht"
 
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, fuzzy, no-c-format
-msgid "&SMS"
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+#, fuzzy
+msgid "SMS"
 msgstr "SMS"
 
 #: plugins/_core/core.cpp:959
@@ -965,38 +960,38 @@ msgid ""
 msgstr ""
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, fuzzy, no-c-format
 msgid "Connection manager"
 msgstr "Verbinden"
 
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 #, fuzzy
 msgid "Show status panel"
 msgstr "Telefoonstatus"
 
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 #, fuzzy
 msgid "Connections"
 msgstr "Verbinding"
 
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 #, fuzzy
 msgid "Change profile"
 msgstr "Gedeelde bestanden"
 
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 #, fuzzy
 msgid "Common status"
 msgstr "Telefoonstatus"
 
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 #, fuzzy
 msgid "Configure client"
 msgstr "ICQ"
 
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 #, fuzzy
 msgid "&Invisible"
@@ -1180,6 +1175,15 @@ msgstr "Verzonden gefaald"
 #, fuzzy
 msgid "Transfer done"
 msgstr "Bestandsoverdracht voltooid"
+
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Sluiten"
 
 #: plugins/_core/filetransfer.cpp:369
 #, fuzzy
@@ -1368,7 +1372,7 @@ msgstr ""
 
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 #, fuzzy
@@ -1489,11 +1493,6 @@ msgstr "Kontaktliste"
 #, fuzzy
 msgid "Messages"
 msgstr "Bericht"
-
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-#, fuzzy
-msgid "SMS"
-msgstr "SMS"
 
 #: plugins/_core/interfacecfg.cpp:142
 msgid "Copy %1 messages from history"
@@ -2766,8 +2765,8 @@ msgstr "\"N/A\"-status instellen na"
 msgid ""
 "Disable online alert in \"Away\", \"N/A\", \"DND\" and \"Occupied\" List"
 msgstr ""
-"Online-waarschuwingen uitschakelen in \"Afwezig\"-, \"N/A\"-, \"Niet "
-"storen\"- en \"Bezet\"-lijst"
+"Online-waarschuwingen uitschakelen in \"Afwezig\"-, \"N/A\"-, \"Niet storen"
+"\"- en \"Bezet\"-lijst"
 
 #: plugins/background/background.cpp:36
 msgid "Background"
@@ -5215,13 +5214,13 @@ msgstr "Aanvraag voor beveiligd kanaal"
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
-"Beveiligde kanaal is tot stand gekomen met SSL met "
-"Diffie-Hellman-sleuteloverdracht en het TLS-protocol versie 1\n"
+"Beveiligde kanaal is tot stand gekomen met SSL met Diffie-Hellman-"
+"sleuteloverdracht en het TLS-protocol versie 1\n"
 "\n"
 "Dit werkt enkel met andere SIM en Licq programma's"
 
@@ -5756,7 +5755,7 @@ msgstr ""
 msgid "Log On"
 msgstr "Inloggen"
 
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 #, fuzzy
 msgid "Log Off"
 msgstr "Inloggen"
@@ -5811,9 +5810,9 @@ msgstr "E-mailadres"
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
 
 #: plugins/jabber/jabbersearch.cpp:304
@@ -5995,10 +5994,9 @@ msgstr "Binnenkomend bestand"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 
 #: plugins/livejournal/livejournal.cpp:1319
@@ -7554,6 +7552,12 @@ msgstr "100000"
 msgid "Software handshake"
 msgstr ""
 
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "Canada"
+
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
 #, fuzzy, no-c-format
@@ -7822,8 +7826,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -10338,6 +10342,10 @@ msgid "Custom"
 msgstr ""
 
 #, fuzzy
+#~ msgid "&SMS"
+#~ msgstr "SMS"
+
+#, fuzzy
 #~ msgid "Open links in &new window"
 #~ msgstr "Transparant hoofdvenster"
 
@@ -10622,9 +10630,6 @@ msgstr ""
 #, fuzzy
 #~ msgid "Apply"
 #~ msgstr "Toepassen"
-
-#~ msgid "Close"
-#~ msgstr "Sluiten"
 
 #, fuzzy
 #~ msgid "Select Font"
