--- a/trunk/po/pl.po
+++ b/trunk/po/pl.po
@@ -4,14 +4,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2005-04-20 21:06+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
 msgid ""
@@ -461,15 +461,9 @@ msgstr "&Informacje o użytkowniku"
 msgid "&History"
 msgstr "&Historia"
 
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
-msgstr "&Zamknij"
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+msgid "Close"
+msgstr "Zamknij"
 
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
 msgid "&Send"
@@ -477,7 +471,7 @@ msgstr "&Wyślij"
 
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
 #, fuzzy
-msgid "&Insert smile"
+msgid "I&nsert smile"
 msgstr "Wstaw &uśmieszek"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 94
@@ -492,7 +486,8 @@ msgid "C&lose after send"
 msgstr "Zam&knij po wysłaniu"
 
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "Wyślij &zbiorowo"
 
 #: plugins/_core/core.cpp:645 plugins/_core/core.cpp:748
@@ -502,7 +497,7 @@ msgstr "&Kolor tła"
 
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
 #, fuzzy
-msgid "&Foreground color"
+msgid "Fo&reground color"
 msgstr "&Kolor tła"
 
 #: plugins/_core/core.cpp:659 plugins/_core/core.cpp:763
@@ -510,7 +505,8 @@ msgid "&Bold"
 msgstr "Po&grubiony"
 
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "&Kursywa"
 
 #: plugins/_core/core.cpp:673 plugins/_core/core.cpp:777
@@ -519,7 +515,7 @@ msgstr "&Podkreślenie"
 
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
 #, fuzzy
-msgid "Select &font"
+msgid "Select f&ont"
 msgstr "Wybierz styl:"
 
 #: plugins/_core/core.cpp:687
@@ -638,11 +634,10 @@ msgstr "Sprawdzanie pisowni"
 msgid "&Messages"
 msgstr "Wiadomość"
 
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, fuzzy, no-c-format
-msgid "&SMS"
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+#, fuzzy
+msgid "SMS"
 msgstr "SMS"
 
 #: plugins/_core/core.cpp:959
@@ -952,38 +947,38 @@ msgid ""
 msgstr ""
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, fuzzy, no-c-format
 msgid "Connection manager"
 msgstr "Łączenie"
 
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 #, fuzzy
 msgid "Show status panel"
 msgstr "Status telefonu"
 
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 #, fuzzy
 msgid "Connections"
 msgstr "Połączenie"
 
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 #, fuzzy
 msgid "Change profile"
 msgstr "Udostępnianie plików"
 
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 #, fuzzy
 msgid "Common status"
 msgstr "ustaw status"
 
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 #, fuzzy
 msgid "Configure client"
 msgstr "Klient ICQ"
 
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 #, fuzzy
 msgid "&Invisible"
@@ -1166,6 +1161,15 @@ msgstr "Wysłanie nieudane"
 #, fuzzy
 msgid "Transfer done"
 msgstr "Pobieranie ukończone:"
+
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Zamknij"
 
 #: plugins/_core/filetransfer.cpp:369
 #, fuzzy
@@ -1354,7 +1358,7 @@ msgstr ""
 
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 msgid "Error"
@@ -1475,11 +1479,6 @@ msgstr "Lista kontaktów wysłana"
 #, fuzzy
 msgid "Messages"
 msgstr "Wiadomość"
-
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-#, fuzzy
-msgid "SMS"
-msgstr "SMS"
 
 #: plugins/_core/interfacecfg.cpp:142
 #, fuzzy
@@ -3030,8 +3029,8 @@ msgid ""
 "specified in the beginning of the message a line:\n"
 "<UIN>:"
 msgstr ""
-"Aby odpowiedzieć lub wysłać nową wiadomość, możesz to zrobic SMSem "
-"dodajac na poczatku linii:\n"
+"Aby odpowiedzieć lub wysłać nową wiadomość, możesz to zrobic SMSem dodajac "
+"na poczatku linii:\n"
 "<UIN>:"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 83
@@ -4557,15 +4556,13 @@ msgstr "Zezwól na bezpośrednie &połączenia od wszystkich"
 #: plugins/icq/icqsecurebase.cc:117 rc.cpp:964
 #, no-c-format
 msgid "Allow direct connection from user listed in &contact list"
-msgstr ""
-"Zezwól na bezpośrednie połą&czenia od użytkowników z listy kontaktów"
+msgstr "Zezwól na bezpośrednie połą&czenia od użytkowników z listy kontaktów"
 
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 164
 #: plugins/icq/icqsecurebase.cc:118 rc.cpp:967
 #, no-c-format
 msgid "Allow direct connection from user &upon authorization"
-msgstr ""
-"Zezwól na bezpośrednie połączenia od użytkowników z a&utoryzacją"
+msgstr "Zezwól na bezpośrednie połączenia od użytkowników z a&utoryzacją"
 
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 45
 #: plugins/icq/icqsecurebase.cc:119 rc.cpp:939
@@ -5223,13 +5220,13 @@ msgstr "Prośba o bezpiecznego połączenia"
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
-"Bezpieczne połączenie jest zestawiane przy użyciu SSL z kluczem "
-"Diffie-Hellmana i protokołem TLS v1.\n"
+"Bezpieczne połączenie jest zestawiane przy użyciu SSL z kluczem Diffie-"
+"Hellmana i protokołem TLS v1.\n"
 "\n"
 "Ta opcja współpracuje tylko z programami SIM i Licq."
 
@@ -5765,7 +5762,7 @@ msgstr ""
 msgid "Log On"
 msgstr "Login"
 
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 #, fuzzy
 msgid "Log Off"
 msgstr "Login"
@@ -5820,9 +5817,9 @@ msgstr "E-mail"
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
 
 #: plugins/jabber/jabbersearch.cpp:304
@@ -6004,10 +6001,9 @@ msgstr "Plik przychodzący:"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 
 #: plugins/livejournal/livejournal.cpp:1319
@@ -7557,6 +7553,12 @@ msgstr "100000"
 msgid "Software handshake"
 msgstr ""
 
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "Kanada"
+
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
 #, fuzzy, no-c-format
@@ -7825,8 +7827,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -10340,6 +10342,10 @@ msgid "Custom"
 msgstr ""
 
 #, fuzzy
+#~ msgid "&SMS"
+#~ msgstr "SMS"
+
+#, fuzzy
 #~ msgid "Open links in &new window"
 #~ msgstr "Przezroczyste okno główne"
 
@@ -10619,9 +10625,6 @@ msgstr ""
 #, fuzzy
 #~ msgid "Apply"
 #~ msgstr "Z&astosuj"
-
-#~ msgid "Close"
-#~ msgstr "Zamknij"
 
 #, fuzzy
 #~ msgid "Select Font"
