--- a/trunk/po/pt_BR.po
+++ b/trunk/po/pt_BR.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Carlos Tadeu Panato Jr. <ctpj@terra.com.br>, 2003.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: pt_BR\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2005-04-20 21:07+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Brazilian Portuguese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 # plugins/about/about.cpp:111
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
@@ -39,8 +39,8 @@ msgstr "Diretório home"
 #: plugins/__homedir/homedir.cpp:59
 msgid "Plugin provides select directory for store config files"
 msgstr ""
-"Este plugin fornece a seleção de diretórios para armazenagem dos arquivos "
-"de configuração"
+"Este plugin fornece a seleção de diretórios para armazenagem dos arquivos de "
+"configuração"
 
 # plugins/__homedir/homedir.cpp:91
 #: plugins/__homedir/homedir.cpp:92
@@ -121,8 +121,7 @@ msgstr "Migrar"
 #: plugins/__migrate/migrate.cpp:40
 msgid "Plugin provides convert configuration and history from SIM 0.8"
 msgstr ""
-"Este plugin fornece a conversão da configuração e do histórico para o "
-"SIM 0.8"
+"Este plugin fornece a conversão da configuração e do histórico para o SIM 0.8"
 
 # plugins/__migrate/migratedlg.cpp:77
 #: plugins/__migrate/migratedlg.cpp:84
@@ -170,8 +169,8 @@ msgid ""
 "version"
 msgstr ""
 "Nota!\n"
-"Se vocêę selecionar a opção \" Remover arquivos antigos\", vocêę não "
-"poderá utilizar a versão antiga"
+"Se vocêę selecionar a opção \" Remover arquivos antigos\", vocêę não poderá "
+"utilizar a versão antiga"
 
 # plugins/__migrate/migratedlgbase.cpp:94
 #. i18n: file ./plugins/__migrate/migratedlgbase.ui line 30
@@ -482,8 +481,7 @@ msgstr ""
 #: plugins/_core/core.cpp:386
 #, fuzzy
 msgid "We'd love to hear what you have to say. Join our chat."
-msgstr ""
-"Estou querendo saber o que você tem para dizer. Entre em nosso chat.\n"
+msgstr "Estou querendo saber o que você tem para dizer. Entre em nosso chat.\n"
 
 # plugins/_core/core.cpp:908 plugins/_core/core.cpp:939
 #: plugins/_core/core.cpp:389
@@ -555,20 +553,10 @@ msgstr "In&formação do usuário"
 msgid "&History"
 msgstr "&Histórico"
 
-# plugins/_core/core.cpp:516 plugins/_core/filetransfer.cpp:310
-# plugins/_core/managerbase.cc:110 plugins/_core/managerbase.cpp:110
-# plugins/_core/toolsetupbase.cc:136 plugins/_core/toolsetupbase.cpp:136
-# plugins/about/aboutdlgbase.cpp:156 plugins/icq/securedlg.cpp:92
-# sim/api/simapi.cpp:427 sim/ui/qt3/i18n.cpp:287
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
-msgstr "&Fechar"
+# sim/ui/qt3/i18n.cpp:170
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+msgid "Close"
+msgstr "Fechar"
 
 # plugins/_core/core.cpp:550 plugins/_core/msgedit.cpp:1009
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
@@ -577,7 +565,8 @@ msgstr "&Enviar"
 
 # plugins/_core/core.cpp:560
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
-msgid "&Insert smile"
+#, fuzzy
+msgid "I&nsert smile"
 msgstr "Inseri&r smile"
 
 # plugins/_core/core.cpp:567 plugins/_core/smscfgbase.cc:102
@@ -596,7 +585,8 @@ msgstr "Fe&char após enviar"
 
 # plugins/_core/core.cpp:583 plugins/_core/msgedit.cpp:998
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "Envio &múltiplo"
 
 # plugins/_core/core.cpp:591 plugins/_core/core.cpp:687
@@ -606,7 +596,8 @@ msgstr "&Cor do plano de fundo"
 
 # plugins/_core/core.cpp:599 plugins/_core/core.cpp:696
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
-msgid "&Foreground color"
+#, fuzzy
+msgid "Fo&reground color"
 msgstr "Cor de Pr&imeiro Plano"
 
 # plugins/_core/core.cpp:605 plugins/_core/core.cpp:702
@@ -616,7 +607,8 @@ msgstr "&Negrito"
 
 # plugins/_core/core.cpp:612 plugins/_core/core.cpp:709
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "Itá&lico"
 
 # plugins/_core/core.cpp:619 plugins/_core/core.cpp:716
@@ -627,7 +619,8 @@ msgstr "S&ublinhar"
 
 # plugins/_core/core.cpp:626 plugins/_core/core.cpp:723
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
-msgid "Select &font"
+#, fuzzy
+msgid "Select f&ont"
 msgstr "Selecionar &Fonte"
 
 # plugins/_core/core.cpp:633
@@ -757,13 +750,11 @@ msgstr "Verificar ortografia"
 msgid "&Messages"
 msgstr "&Mensagens"
 
-# plugins/_core/core.cpp:900 plugins/_core/msgedit.cpp:1600
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, no-c-format
-msgid "&SMS"
-msgstr "&SMS"
+# plugins/_core/interfacecfg.cpp:84
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+msgid "SMS"
+msgstr "SMS"
 
 # plugins/_core/core.cpp:509 plugins/_core/core.cpp:1068
 #: plugins/_core/core.cpp:959
@@ -1121,40 +1112,40 @@ msgstr ""
 # plugins/_core/core.cpp:3349 plugins/_core/core.cpp:3371
 # plugins/_core/managerbase.cc:103 plugins/_core/managerbase.cpp:103
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, no-c-format
 msgid "Connection manager"
 msgstr "Gerenciador de conexão"
 
 # plugins/_core/core.cpp:3357
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 msgid "Show status panel"
 msgstr "Mostrar painel de estado"
 
 # plugins/_core/core.cpp:3364
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 msgid "Connections"
 msgstr "Conexões"
 
 # plugins/_core/core.cpp:3379
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 msgid "Change profile"
 msgstr "Alterar perfil"
 
 # plugins/_core/core.cpp:3408
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 msgid "Common status"
 msgstr "Estado comum"
 
 # plugins/_core/core.cpp:3414
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 msgid "Configure client"
 msgstr "Configurar o cliente"
 
 # plugins/_core/core.cpp:3438 plugins/_core/status.cpp:152
 # plugins/_core/status.cpp:220
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 msgid "&Invisible"
 msgstr "&Invisível"
@@ -1359,6 +1350,20 @@ msgstr "Enviar falha"
 #: plugins/_core/filetransfer.cpp:305
 msgid "Transfer done"
 msgstr "Transferência de arquivo concluída"
+
+# plugins/_core/core.cpp:516 plugins/_core/filetransfer.cpp:310
+# plugins/_core/managerbase.cc:110 plugins/_core/managerbase.cpp:110
+# plugins/_core/toolsetupbase.cc:136 plugins/_core/toolsetupbase.cpp:136
+# plugins/about/aboutdlgbase.cpp:156 plugins/icq/securedlg.cpp:92
+# sim/api/simapi.cpp:427 sim/ui/qt3/i18n.cpp:287
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Fechar"
 
 # plugins/_core/filetransfer.cpp:321
 #: plugins/_core/filetransfer.cpp:369
@@ -1575,7 +1580,7 @@ msgstr ""
 # plugins/windock/windock.cpp:179 sim/ui/qt3/i18n.cpp:141
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 msgid "Error"
@@ -1720,11 +1725,6 @@ msgstr "Lista de contatos"
 #: plugins/_core/interfacecfg.cpp:98
 msgid "Messages"
 msgstr "Mensagens"
-
-# plugins/_core/interfacecfg.cpp:84
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-msgid "SMS"
-msgstr "SMS"
 
 # plugins/_core/interfacecfg.cpp:127
 #: plugins/_core/interfacecfg.cpp:142
@@ -3470,8 +3470,7 @@ msgid ""
 "* - any amount of symbols (or is empty)\n"
 "? - any symbol"
 msgstr ""
-"Palavras são divididas por qualquer separador (espaço, hífem, por "
-"exemplo)\n"
+"Palavras são divididas por qualquer separador (espaço, hífem, por exemplo)\n"
 "A frase pode se especificada usando aspas\n"
 "Palavras podem conter curingas:\n"
 "* - Qualquer quantidade de símbolos ( ou é vazio)\n"
@@ -4228,8 +4227,7 @@ msgstr ""
 #: plugins/icq/encodingdlgbase.cc:84 rc.cpp:915
 #, no-c-format
 msgid "You will choose the coding by default which want to use:"
-msgstr ""
-"Você pode escolher a codificação por padrão as quais quer utilizar:"
+msgstr "Você pode escolher a codificação por padrão as quais quer utilizar:"
 
 #: plugins/icq/homeinfo.cpp:43
 msgid "map"
@@ -5268,8 +5266,7 @@ msgstr "UIN"
 #, no-c-format
 msgid "My &authorization is required before users add me to Contact List"
 msgstr ""
-"Minha &autorização é requerida antes de me adicionar na sua lista de "
-"contatos"
+"Minha &autorização é requerida antes de me adicionar na sua lista de contatos"
 
 # plugins/icq/icqsecurebase.cc:214
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 75
@@ -5317,8 +5314,7 @@ msgstr "Permitir &conexões diretas com qualquer usuário"
 #: plugins/icq/icqsecurebase.cc:117 rc.cpp:964
 #, no-c-format
 msgid "Allow direct connection from user listed in &contact list"
-msgstr ""
-"Permitir conexões diretas com usuários listados na lista de &contatos"
+msgstr "Permitir conexões diretas com usuários listados na lista de &contatos"
 
 # plugins/icq/icqsecurebase.cc:221
 #. i18n: file ./plugins/icq/icqsecurebase.ui line 164
@@ -6134,8 +6130,8 @@ msgstr "Requisitar canel seguro"
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
@@ -6769,7 +6765,7 @@ msgid "Log On"
 msgstr "Logon"
 
 # plugins/jabber/jabbermessage.cpp:175 plugins/jabber/jabbermessage.cpp:222
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 msgid "Log Off"
 msgstr "Logoff"
 
@@ -6832,9 +6828,9 @@ msgstr "Email"
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
 
 # plugins/jabber/jabbersearch.cpp:177
@@ -7045,10 +7041,9 @@ msgstr "Falha no login"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 
 # plugins/icq/icqicmb.cpp:164
@@ -8796,6 +8791,13 @@ msgstr "100000"
 msgid "Software handshake"
 msgstr ""
 
+# sim/api/country.cpp:63
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "Canada"
+
 # plugins/icq/aiminfobase.cc:289 plugins/icq/aimsearchbase.cc:288
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
@@ -9097,8 +9099,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -12075,6 +12077,10 @@ msgstr "Erro de inicialização SSL"
 msgid "Custom"
 msgstr "Personalizado"
 
+# plugins/_core/core.cpp:900 plugins/_core/msgedit.cpp:1600
+#~ msgid "&SMS"
+#~ msgstr "&SMS"
+
 #, fuzzy
 #~ msgid "Open links in &new window"
 #~ msgstr "Abrir janela principal"
@@ -12472,27 +12478,23 @@ msgstr "Personalizado"
 #~ msgid "Apply"
 #~ msgstr "Aplicar"
 
-# sim/ui/qt3/i18n.cpp:170
-#~ msgid "Close"
-#~ msgstr "Fechar"
-
 # sim/ui/qt3/i18n.cpp:172
 #~ msgid "Select Font"
 #~ msgstr "Selecionar fonte"
 
 # sim/ui/qt3/i18n.cpp:177
 #~ msgid ""
-#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ GUI "
-#~ "toolkit from Trolltech. Qt provides single-source portability across Windows "
-#~ "95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of Unix with "
-#~ "X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
+#~ "<h3>About Qt</h3><p>This program uses Qt version %1, a multiplatform C++ "
+#~ "GUI toolkit from Trolltech. Qt provides single-source portability across "
+#~ "Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many other versions of "
+#~ "Unix with X11.</p><p>See <tt>http://www.trolltech.com/qt/</tt> for more "
 #~ "information.</p>"
 #~ msgstr ""
 #~ "<h3>Sobre o Qt</h3><p>Esse programa utiliza o Qt versao %1, e "
 #~ "multiplataforma C++ GUI toolkit from Trolltech. Qt provides single-source "
 #~ "portability across Windows 95/98/NT/2000, Linux, Solaris, HP-UX and many "
-#~ "other versions of Unix with X11.</p><p>See "
-#~ "<tt>http://www.trolltech.com/qt/</tt> for more information.</p>"
+#~ "other versions of Unix with X11.</p><p>See <tt>http://www.trolltech.com/"
+#~ "qt/</tt> for more information.</p>"
 
 # sim/ui/qt3/i18n.cpp:183
 #~ msgid "Help"
