--- a/trunk/po/sv.po
+++ b/trunk/po/sv.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: sim trunk\n"
-"POT-Creation-Date: 2008-05-25 16:23+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2008-05-27 00:03+0200\n"
 "PO-Revision-Date: 2007-10-22 13:58+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:114
 msgid ""
@@ -111,8 +111,8 @@ msgstr "Migrera"
 #: plugins/__migrate/migrate.cpp:40
 msgid "Plugin provides convert configuration and history from SIM 0.8"
 msgstr ""
-"Insticksmodul som tillhandahåller konvertering av konfiguration och "
-"historik från SIM 0.8"
+"Insticksmodul som tillhandahåller konvertering av konfiguration och historik "
+"från SIM 0.8"
 
 #: plugins/__migrate/migratedlg.cpp:84
 msgid "Cancel convert?"
@@ -375,8 +375,7 @@ msgid ""
 "please leave your message and I will get back to you as soon as I return!"
 msgstr ""
 "Jag är för närvarande frånvarande från ICQ.\n"
-"Lämna ett meddelande så återkommer jag till dig så snart jag kommer "
-"tillbaka!"
+"Lämna ett meddelande så återkommer jag till dig så snart jag kommer tillbaka!"
 
 #: plugins/_core/core.cpp:376
 msgid ""
@@ -451,14 +450,9 @@ msgstr "Användar&information"
 msgid "&History"
 msgstr "&Historik"
 
-#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
-#: plugins/_core/core.cpp:562 plugins/_core/filetransfer.cpp:359
-#: plugins/_core/managerbase.cpp:109 plugins/_core/toolsetupbase.cpp:135
-#: plugins/about/aboutdlgbase.cpp:121 plugins/icq/securedlg.cpp:104
-#: plugins/jabber/discoinfobase.cpp:289 rc.cpp:400 rc.cpp:1546 rc.cpp:1964
-#: rc.cpp:2316 sim/misc.cpp:410
-#, no-c-format
-msgid "&Close"
+#: plugins/_core/core.cpp:562 sim/misc.cpp:410
+#, fuzzy
+msgid "Close"
 msgstr "&Stäng"
 
 #: plugins/_core/core.cpp:594 plugins/_core/msgedit.cpp:980
@@ -466,7 +460,8 @@ msgid "&Send"
 msgstr "&Skicka"
 
 #: plugins/_core/core.cpp:614 plugins/_core/core.cpp:1610
-msgid "&Insert smile"
+#, fuzzy
+msgid "I&nsert smile"
 msgstr "&Infoga smilis"
 
 # Osäker på denna. Translit är ett intressant ord
@@ -482,7 +477,8 @@ msgid "C&lose after send"
 msgstr "S&täng efter sändning"
 
 #: plugins/_core/core.cpp:637 plugins/_core/msgedit.cpp:970
-msgid "&Multiply send"
+#, fuzzy
+msgid "Multi&ply send"
 msgstr "&Multipel sändning"
 
 #: plugins/_core/core.cpp:645 plugins/_core/core.cpp:748
@@ -490,7 +486,8 @@ msgid "Back&ground color"
 msgstr "Bak&grundsfärg"
 
 #: plugins/_core/core.cpp:653 plugins/_core/core.cpp:757
-msgid "&Foreground color"
+#, fuzzy
+msgid "Fo&reground color"
 msgstr "&Förgrundsfärg"
 
 #: plugins/_core/core.cpp:659 plugins/_core/core.cpp:763
@@ -498,7 +495,8 @@ msgid "&Bold"
 msgstr "&Fet"
 
 #: plugins/_core/core.cpp:666 plugins/_core/core.cpp:770
-msgid "&Italic"
+#, fuzzy
+msgid "It&alic"
 msgstr "&Kursiv"
 
 #: plugins/_core/core.cpp:673 plugins/_core/core.cpp:777
@@ -506,7 +504,8 @@ msgid "&Underline"
 msgstr "&Understruken"
 
 #: plugins/_core/core.cpp:680 plugins/_core/core.cpp:784
-msgid "Select &font"
+#, fuzzy
+msgid "Select f&ont"
 msgstr "Välj &typsnitt"
 
 #: plugins/_core/core.cpp:687
@@ -610,12 +609,10 @@ msgstr "Stavningskontroll"
 msgid "&Messages"
 msgstr "&Meddelanden"
 
-#. i18n: file ./plugins/sms/smssetupbase.ui line 45
-#: plugins/_core/core.cpp:952 plugins/_core/msgedit.cpp:1647
-#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
-#, no-c-format
-msgid "&SMS"
-msgstr "&SMS"
+#: plugins/_core/core.cpp:952 plugins/_core/interfacecfg.cpp:101
+#: plugins/_core/msgedit.cpp:1647 plugins/sms/sms.cpp:192
+msgid "SMS"
+msgstr "SMS"
 
 #: plugins/_core/core.cpp:959
 msgid "&History setup"
@@ -898,33 +895,33 @@ msgid ""
 msgstr "Kunde inte skapa profilen.  Använd helst inte några specialtecken."
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
-#: plugins/_core/core.cpp:4086 plugins/_core/core.cpp:4107
+#: plugins/_core/core.cpp:4087 plugins/_core/core.cpp:4108
 #: plugins/_core/managerbase.cpp:102 rc.cpp:1943
 #, no-c-format
 msgid "Connection manager"
 msgstr "Anslutningshanterare"
 
-#: plugins/_core/core.cpp:4093
+#: plugins/_core/core.cpp:4094
 msgid "Show status panel"
 msgstr "Visa statuspanel"
 
-#: plugins/_core/core.cpp:4100
+#: plugins/_core/core.cpp:4101
 msgid "Connections"
 msgstr "Anslutningar"
 
-#: plugins/_core/core.cpp:4115
+#: plugins/_core/core.cpp:4116
 msgid "Change profile"
 msgstr "Ändra profil"
 
-#: plugins/_core/core.cpp:4142
+#: plugins/_core/core.cpp:4143
 msgid "Common status"
 msgstr "Vanlig status"
 
-#: plugins/_core/core.cpp:4148
+#: plugins/_core/core.cpp:4149
 msgid "Configure client"
 msgstr "Konfigurera klient"
 
-#: plugins/_core/core.cpp:4173 plugins/_core/status.cpp:144
+#: plugins/_core/core.cpp:4174 plugins/_core/status.cpp:144
 #: plugins/_core/status.cpp:234
 msgid "&Invisible"
 msgstr "&Osynlig"
@@ -1094,6 +1091,15 @@ msgstr "Skicka fil"
 #: plugins/_core/filetransfer.cpp:305
 msgid "Transfer done"
 msgstr "Överföring är klar"
+
+#. i18n: file ./plugins/jabber/discoinfobase.ui line 706
+#: plugins/_core/filetransfer.cpp:359 plugins/_core/managerbase.cpp:109
+#: plugins/_core/toolsetupbase.cpp:135 plugins/about/aboutdlgbase.cpp:121
+#: plugins/icq/securedlg.cpp:104 plugins/jabber/discoinfobase.cpp:289
+#: rc.cpp:400 rc.cpp:1546 rc.cpp:1964 rc.cpp:2316 sim/misc.cpp:410
+#, no-c-format
+msgid "&Close"
+msgstr "&Stäng"
 
 #: plugins/_core/filetransfer.cpp:369
 msgid "Transfer failed"
@@ -1281,7 +1287,7 @@ msgstr "Textfil (*.txt)"
 
 #: plugins/_core/historywnd.cpp:259 plugins/_core/historywnd.cpp:279
 #: plugins/_core/status.cpp:130 plugins/_core/statuswnd.cpp:101
-#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:229
+#: plugins/jabber/jabbermessage.cpp:111 plugins/jabber/jabbermessage.cpp:228
 #: plugins/logger/logconfig.cpp:97 plugins/netmonitor/monitor.cpp:106
 #: plugins/windock/windock.cpp:187
 msgid "Error"
@@ -1399,10 +1405,6 @@ msgstr "Kontaktlista"
 #: plugins/_core/interfacecfg.cpp:98
 msgid "Messages"
 msgstr "Meddelanden"
-
-#: plugins/_core/interfacecfg.cpp:101 plugins/sms/sms.cpp:192
-msgid "SMS"
-msgstr "SMS"
 
 #: plugins/_core/interfacecfg.cpp:142
 msgid "Copy %1 messages from history"
@@ -2572,8 +2574,8 @@ msgid ""
 "If program output is empty,  message will be destroyed.\n"
 "Thus it is possible to organize additional messages filters.\n"
 msgstr ""
-"För meddelandehändelser kommer meddelandetexten att skickas till standard "
-"in för programmet.\n"
+"För meddelandehändelser kommer meddelandetexten att skickas till standard in "
+"för programmet.\n"
 "Om programmet returnerar en noll-felskod kommer meddelandetexten att "
 "ersättas med programmets utdata.\n"
 "Om programmets utdata är tomt kommer meddelandet att förstöras.\n"
@@ -2653,8 +2655,8 @@ msgstr "Ställ in statusen \"Frånkopplad\" efter"
 msgid ""
 "Disable online alert in \"Away\", \"N/A\", \"DND\" and \"Occupied\" List"
 msgstr ""
-"Inaktivera anslutningsalarm i \"Frånvarande\", \"Inte tillgänglig\", "
-"\"Stör inte\" och \"Upptagen\"-lista."
+"Inaktivera anslutningsalarm i \"Frånvarande\", \"Inte tillgänglig\", \"Stör "
+"inte\" och \"Upptagen\"-lista."
 
 #: plugins/background/background.cpp:36
 msgid "Background"
@@ -2662,8 +2664,7 @@ msgstr "Bakgrund"
 
 #: plugins/background/background.cpp:37
 msgid "Plugin provides background pictures for user list"
-msgstr ""
-"Insticksmodul som tillhandahåller bakgrundsbilder för användarlistan"
+msgstr "Insticksmodul som tillhandahåller bakgrundsbilder för användarlistan"
 
 #: plugins/background/bkgndcfg.cpp:50
 msgid "Select background picture"
@@ -2830,16 +2831,15 @@ msgstr "&Ta endast emot meddelande från kontakter på listan"
 #, no-c-format
 msgid "&Receive authorization and system messages only from contacts from list"
 msgstr ""
-"&Ta endast emot auktorisering och systemmeddelanden från kontakter på "
-"listan"
+"&Ta endast emot auktorisering och systemmeddelanden från kontakter på listan"
 
 #. i18n: file ./plugins/filter/filtercfgbase.ui line 61
 #: plugins/filter/filtercfgbase.cpp:70 rc.cpp:1316
 #, no-c-format
 msgid "Reject messages from unknown users contains this words or phrases:"
 msgstr ""
-"Vägra ta emot meddelanden från okända användare som innehåller dessa "
-"ord eller fraser:"
+"Vägra ta emot meddelanden från okända användare som innehåller dessa ord "
+"eller fraser:"
 
 #. i18n: file ./plugins/filter/filtercfgbase.ui line 90
 #: plugins/filter/filtercfgbase.cpp:71 rc.cpp:1319
@@ -2898,8 +2898,8 @@ msgstr ""
 #, no-c-format
 msgid "Send all messages in status \"Away\" and \"N/A\" on the cellular:"
 msgstr ""
-"Skicka alla meddelanden när status \"Frånvarande\" och \"Inte "
-"tillgänglig\" är aktiva till mobiltelefonen:"
+"Skicka alla meddelanden när status \"Frånvarande\" och \"Inte tillgänglig\" "
+"är aktiva till mobiltelefonen:"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 65
 #: plugins/forward/forwardcfgbase.cpp:71 rc.cpp:2291
@@ -2909,8 +2909,8 @@ msgid ""
 "specified in the beginning of the message a line:\n"
 "<UIN>:"
 msgstr ""
-"För svar eller sändning av nya meddelanden kan du svara på SMS:et genom "
-"att ange följande i början av meddelandet:\n"
+"För svar eller sändning av nya meddelanden kan du svara på SMS:et genom att "
+"ange följande i början av meddelandet:\n"
 "<UIN>:"
 
 #. i18n: file ./plugins/forward/forwardcfgbase.ui line 83
@@ -2926,16 +2926,16 @@ msgstr "GPG"
 #: plugins/gpg/gpg.cpp:62
 msgid "Plugin adds GnuPG encryption/decryption support for messages"
 msgstr ""
-"Insticksmodul som tillhandahåller stöd för GnuPG kryptering/dekryptering "
-"för meddelanden"
+"Insticksmodul som tillhandahåller stöd för GnuPG kryptering/dekryptering för "
+"meddelanden"
 
 #: plugins/gpg/gpg.cpp:86
 msgid ""
 "Plugin adds GnuPG encryption/decryption support for messages\n"
 "GPG not found in PATH"
 msgstr ""
-"Insticksmodul som tillhandahåller stöd för GnuPG kryptering/dekryptering "
-"för meddelanden\n"
+"Insticksmodul som tillhandahåller stöd för GnuPG kryptering/dekryptering för "
+"meddelanden\n"
 "GPG hittades inte i PATH"
 
 #: plugins/gpg/gpg.cpp:362 plugins/gpg/gpg.cpp:368
@@ -3846,8 +3846,7 @@ msgstr "Inaktivera svar på telefonbok och &bildbegäran"
 #: plugins/icq/icqconfigbase.cc:286 rc.cpp:753
 #, no-c-format
 msgid "Disable automatically &request autoreply on change status"
-msgstr ""
-"Inaktivera automatiskt &begäran om automatiskt svar vid statusändring"
+msgstr "Inaktivera automatiskt &begäran om automatiskt svar vid statusändring"
 
 #. i18n: file ./plugins/icq/icqconfigbase.ui line 635
 #: plugins/icq/icqconfigbase.cc:287 rc.cpp:756
@@ -4124,8 +4123,7 @@ msgstr "UIN blev suspenderat"
 
 #: plugins/icq/icqlogin.cpp:328
 msgid "Can't login to ICQ network - Please try again later"
-msgstr ""
-"Kan inte logga in på ICQ-nätverket - Var vänlig försök igen senare"
+msgstr "Kan inte logga in på ICQ-nätverket - Var vänlig försök igen senare"
 
 #: plugins/icq/icqlogin.cpp:351
 msgid "Your UIN is being used from another location"
@@ -5025,8 +5023,8 @@ msgstr "Begäran om säker kanal"
 #: plugins/icq/securedlgbase.cc:73 rc.cpp:927
 #, no-c-format
 msgid ""
-"Secure channel is established using SSL with Diffie-Hellman key exchange and "
-" the TLS version 1 protocol.\n"
+"Secure channel is established using SSL with Diffie-Hellman key exchange "
+"and  the TLS version 1 protocol.\n"
 "\n"
 "This only works with other SIM and Licq clients"
 msgstr ""
@@ -5061,8 +5059,8 @@ msgid ""
 "or her activity. Do this only if %1 has done something to merit a warning."
 msgstr ""
 "Klicka OK för att skicka en varning till %1. Detta kommer att visa en "
-"varning hos %1 och begränsa hans eller hennes aktivitet. Gör endast detta "
-"om %1 har gjort något som kräver en varning."
+"varning hos %1 och begränsa hans eller hennes aktivitet. Gör endast detta om "
+"%1 har gjort något som kräver en varning."
 
 #. i18n: file ./plugins/icq/warndlgbase.ui line 61
 #: plugins/icq/warndlgbase.cc:84 rc.cpp:1020
@@ -5553,7 +5551,7 @@ msgstr ""
 msgid "Log On"
 msgstr "Logga in"
 
-#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:223
+#: plugins/jabber/jabbermessage.cpp:177 plugins/jabber/jabbermessage.cpp:222
 msgid "Log Off"
 msgstr "Logga ut"
 
@@ -5603,14 +5601,14 @@ msgstr "E-post"
 #: plugins/jabber/jabbersearch.cpp:303
 msgid ""
 "Select the speed of the search.  \"Fast\" matches your string to the "
-"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  "
-"\"Slower\" matches your string anywhere in the field (ie. \"b\" would yield "
-"Bob, Bill, Caleb, Robbie, etc...)"
+"beginning of the field only (ie. \"b\" would yield Bob,Bill,etc...)  \"Slower"
+"\" matches your string anywhere in the field (ie. \"b\" would yield Bob, "
+"Bill, Caleb, Robbie, etc...)"
 msgstr ""
-"Välj sökhastighet. \"Snabb\" matchar endast din sträng till början av "
-"fältet (exempelvis \"b\" skulle ge Bob,Bill,etc...)  \"Långsam\" matchar "
-"din sträng någonstans i fältet (exempelvis \"b\" skulle ge Bob, Bill, "
-"Caleb, Robbie, etc...)"
+"Välj sökhastighet. \"Snabb\" matchar endast din sträng till början av fältet "
+"(exempelvis \"b\" skulle ge Bob,Bill,etc...)  \"Långsam\" matchar din sträng "
+"någonstans i fältet (exempelvis \"b\" skulle ge Bob, Bill, Caleb, Robbie, "
+"etc...)"
 
 #: plugins/jabber/jabbersearch.cpp:304
 msgid "Search Speed"
@@ -5645,8 +5643,8 @@ msgid ""
 "Enter your MSN Messenger account and password. Example: user@hotmail.com.  "
 "Nickname is optional."
 msgstr ""
-"Ange ditt MSN Messenger-konto och lösenord. Exempel: "
-"användare@hotmail.com. Smeknamn är valfritt."
+"Ange ditt MSN Messenger-konto och lösenord. Exempel: användare@hotmail.com. "
+"Smeknamn är valfritt."
 
 #: plugins/jabber/jabbersearch.cpp:315
 msgid "Enter your AIM screenname or ICQ UIN and the password for that account"
@@ -5685,8 +5683,8 @@ msgid ""
 "Fill in a field to search for any matching Jabber User (POSIX regular "
 "expressions allowed)"
 msgstr ""
-"Fyll i ett fält för att söka efter matchande Jabber-användare "
-"(POSIX-reguljära uttryck är tillåtna)"
+"Fyll i ett fält för att söka efter matchande Jabber-användare (POSIX-"
+"reguljära uttryck är tillåtna)"
 
 #: plugins/jabber/jabbersearch.cpp:323
 msgid "Fill in a field to search for any matching Jabber users."
@@ -5697,8 +5695,8 @@ msgid ""
 "To register, please fill out the following form.  Be as accurate as possible "
 "to make it easier for people to search for you."
 msgstr ""
-"För att registrera, fyll i följande formulär. Var så exakt som möjligt "
-"för att göra det enklare för folk att söka efter dig."
+"För att registrera, fyll i följande formulär. Var så exakt som möjligt för "
+"att göra det enklare för folk att söka efter dig."
 
 #. i18n: file ./plugins/jabber/jabberworkinfobase.ui line 96
 #: plugins/jabber/jabberworkinfobase.cpp:90 rc.cpp:322
@@ -5788,15 +5786,13 @@ msgstr "Postning misslyckades"
 
 #: plugins/livejournal/livejournal.cpp:798
 msgid ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
-"ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://"
+"sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
-"<div "
-"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Drivs"
-" av <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.org\">Snabbmeddelandeklienten SIM</a></div>"
+"<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%"
+"\">Drivs av <a style=\"font-size:1em;font-style:italic;\" href=\"http://sim-"
+"im.org\">Snabbmeddelandeklienten SIM</a></div>"
 
 #: plugins/livejournal/livejournal.cpp:1319
 msgid "Invalid username"
@@ -6502,8 +6498,8 @@ msgid ""
 msgstr ""
 "Insticksmodul som tillhandahåller loggutskrift\n"
 "Du kan ställa in felsökningsnivån från kommandoraden med -d<loggnivå>\n"
-"För att logga fel, ställ in loggnivån till 1, för varningar till 2 och "
-"för felsökningsmeddelanden till 4\n"
+"För att logga fel, ställ in loggnivån till 1, för varningar till 2 och för "
+"felsökningsmeddelanden till 4\n"
 "Om du vill logga mer än en kan du lägga till nivåerna"
 
 #: plugins/logger/logger.cpp:78
@@ -6717,8 +6713,8 @@ msgstr "Överst"
 #: plugins/ontop/ontop.cpp:52
 msgid "Plugin provides main window and containers always on top"
 msgstr ""
-"Insticksmodul som tillhandahåller att huvudfönster och behållare alltid "
-"är överst"
+"Insticksmodul som tillhandahåller att huvudfönster och behållare alltid är "
+"överst"
 
 #: plugins/ontop/ontop.cpp:80
 msgid "Always on top"
@@ -7256,6 +7252,12 @@ msgstr "300"
 msgid "Software handshake"
 msgstr "Programvaruhandskakning"
 
+#. i18n: file ./plugins/sms/smssetupbase.ui line 45
+#: plugins/sms/smssetupbase.cpp:152 rc.cpp:2233
+#, fuzzy, no-c-format
+msgid "Hand&y"
+msgstr "och"
+
 #. i18n: file ./plugins/sms/smssetupbase.ui line 297
 #: plugins/sms/smssetupbase.cpp:153 rc.cpp:2275
 #, no-c-format
@@ -7297,8 +7299,8 @@ msgid ""
 "Qt provides sound output so you just need to set a player if you don't like "
 "Qt's sound."
 msgstr ""
-"Qt tillhandahåller ljudutdata så att du bara behöver ställa in en "
-"uppspelare om du inte tycker om Qt:s ljud."
+"Qt tillhandahåller ljudutdata så att du bara behöver ställa in en uppspelare "
+"om du inte tycker om Qt:s ljud."
 
 #: plugins/sound/soundconfig.cpp:70
 msgid "Events"
@@ -7468,8 +7470,8 @@ msgstr "Uppdatera"
 #: plugins/update/update.cpp:67
 msgid "Plugin provides notifications about update SIM software"
 msgstr ""
-"Insticksmodul som tillhandahåller notifieringar om uppdateringar av "
-"SIM-programvaran"
+"Insticksmodul som tillhandahåller notifieringar om uppdateringar av SIM-"
+"programvaran"
 
 #: plugins/update/update.cpp:198
 #, fuzzy
@@ -7524,8 +7526,8 @@ msgstr ""
 
 #: plugins/update/update.cpp:266
 msgid ""
-"Please contact and inform me via noragen@gmx.net about this issue. "
-"//\\//oRaGen."
+"Please contact and inform me via noragen@gmx.net about this issue. //\\//"
+"oRaGen."
 msgstr ""
 
 #: plugins/update/update.cpp:291
@@ -9919,6 +9921,9 @@ msgstr "SSL-initieringsfel"
 #: sim/textshow.cpp:603
 msgid "Custom"
 msgstr "Anpassad"
+
+#~ msgid "&SMS"
+#~ msgstr "&SMS"
 
 #~ msgid "Open links in &new window"
 #~ msgstr "Öppna länkar i &nytt fönster"
