--- a/branches/trunk-debian-official/debian/sim.1
+++ b/branches/trunk-debian-official/debian/sim.1
@@ -1,6 +1,6 @@
-.TH "SIM" "1" "June 29, 2006" "SIM-IM Team" "Simple Instant Messenger"
+.TH "SIM" "1" "June 09, 2008" "SIM-IM Team" "Sim-IM Instant Messenger"
 .SH NAME
-SIM \- Simple Instant Messenger
+SIM \- Sim-IM Instant Messenger
 .SH SYNOPSIS
 .B sim
 [\fIQt-options\fR] [\fIKDE-options\fR] [\fIoptions\fR]
