several cleanups and fixes

--- a/branches/trunk-debian-official/debian/sim.1
+++ b/branches/trunk-debian-official/debian/sim.1
@@ -1,11 +1,11 @@
-.TH "SIM" "1" "June 09, 2008" "SIM-IM Team" "Sim-IM Instant Messenger"
+.TH "SIM" "1" "July 29, 2008" "SIM-IM Team" "Sim-IM Instant Messenger"
 .SH NAME
-SIM \- Sim-IM Instant Messenger
+sim \- Sim-IM Instant Messenger
 .SH SYNOPSIS
 .B sim
 [\fIQt-options\fR] [\fIKDE-options\fR] [\fIoptions\fR]
 .SH DESCRIPTION
-ICQ client
+SIM-IM is a simple and powerful multi-protocol instant messenger.
 .SS "Generic options:"
 .TP
 \fB\-\-help\fR
@@ -48,6 +48,8 @@ Show Monitor Window.
 \fB\-s\fR <socket>
 Control socket
 .SH "SEE ALSO"
+.BR simctrl (1).
+.PP
 Information and help about SIM-IM can be found at project's site
 .B http://sim-im.org/
 .PP
@@ -69,4 +71,7 @@ More information about Qt can be found at Trolltech's site
 .B http://doc.trolltech.com/qt.html
 
 .SH "AUTHORS"
-SIM-IM Team, see http://sim-im.org/ and /usr/share/doc/sim/AUTHORS.sim
+SIM-IM Team, see
+.B http://sim-im.org/
+and
+.BR /usr/share/doc/sim/AUTHORS.sim
