--- a/branches/trunk-debian-official/debian/changelog
+++ b/branches/trunk-debian-official/debian/changelog
@@ -1,14 +1,14 @@
-sim (0.9.5~svn20080716-1) unstable; urgency=low
+sim (sim-0.9.5~svn20080716-1) unstable; urgency=low
 
-  * New upstream 0.9.4.5 SVN is available (Closes: #420095)
-  * sounds/icons with unclear licensing (Closes: #386570)
-  * bashism in debian/rules (Closes: #484436)
-  * wrong dependency (Closes: #420094)
+  * New upstream version 0.9.4.5 SVN (Closes: #420095)
+  * Replaced sounds and icons with unclear licensing with GPL ones. (Closes: #386570)
+  * Fixed bashism in debian/rules (Closes: #484436)
+  * Updated libpng version in debian/control (Closes: #420094)
   * Added "-- -Z bzip2" to dh_builddeb so that we use bzip2 compression
     for the binary packages instead of gzip.
   * Updated rules and control to use cmake.
 
- -- Alexander Petrov <zowers@gmail.com>  Wed, 23 Jul 2008 15:57:58 +0400
+ -- Alexander <zowers@gmail.com>  Tue, 29 Jul 2008 16:17:35 +0400
 
 sim (0.9.4.2-1) unstable; urgency=high
 
